--- a/src/assets/anim.scss
+++ b/src/assets/anim.scss
@@ -98,6 +98,19 @@
     }
 }
 
+// 从右侧滑入动画
+@keyframes slideInRight {
+    from {
+        transform: translateX(50px);
+        opacity: 0;
+    }
+
+    to {
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+
 // 宽度展开动画
 @keyframes expandWidth {
     from {
@@ -132,19 +145,6 @@
     }
 }
 
-// 从右侧滑入动画
-@keyframes slideInRight {
-    from {
-        transform: translateX(50px);
-        opacity: 0;
-    }
-
-    to {
-        transform: translateX(0);
-        opacity: 1;
-    }
-}
-
 // 卡片出现动画 - 3D效果
 @keyframes cardAppear {
     from {
@@ -171,7 +171,7 @@
     }
 }
 
-// 弹出动画
+// 弹出放大动画
 @keyframes popIn {
     from {
         transform: scale(0.5);
